# reapackdb-cli

./: .release-please-config.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  main.yml  pr-title-lint.yml  release-please.yml  release.yml  test.yml
example-data/: reapack.ini
src/: lib.rs  main.rs  manifest.rs  reapack.rs
src/commands/: add.rs  discover.rs  import.rs  mod.rs  remove.rs  sync.rs
test-data/ReaPack/: registry.db
tests/: integration_test.rs  sync_integration_test.rs  workflow_test.rs
