[package]
name = "reapackdb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0"
inquire = "0.9"
ini = { package = "rust-ini", version = "0.21" }
rusqlite = "0.39"
reqwest = { version = "0.13", features = ["blocking"] }
quick-xml = { version = "0.40", features = ["serialize"] }

[dev-dependencies]
tempfile = "3.13"
