[package]
name = "reapackdb"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "6.0"
inquire = "0.9"
ini = { package = "rust-ini", version = "0.21" }
rusqlite = { version = "0.39", features = ["bundled"] }
reqwest = { version = "0.13", features = ["blocking", "native-tls"], default-features = false }
openssl = { version = "0.10", features = ["vendored"] }
quick-xml = { version = "0.40", features = ["serialize"] }

[dev-dependencies]
tempfile = "3.13"
